first commit to make sure working plz no del ass4

--- a/20221025 Ass5/index.html
+++ b/20221025 Ass5/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
 	<title>Welcome to E Corp.</title>
-	<link href="css/styles.css" type="text/css" rel="stylesheet">
+	<link href="styles.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -22,16 +21,24 @@
 		</nav>
 
 		<section id="content">
-			<h2>Where in the world are you?</h2>
+			<h2>THEME TITLE HERE</h2>
 
-			<div id="locationhere"></div>
+			<div id="content-item-list">
+				<!-- sample of what your toString should output
+					<div id="content-item-0">
+						<h4>name here</h4>
+						<p>description here</p>
+						<div>category genre here</div>
+					</div>
+				-->
+			</div>
 		</section>
 
 		<footer></footer>
 	</section>
 
-	<script src="js/jquery.js"></script>
-	<script src="js/script.js"></script>
+	<script src="jquery.js"></script>
+	<script src="script.js"></script>
 </body>
 
 </html>
