--- a/WEB303As06/index.html
+++ b/WEB303As06/index.html
@@ -3,11 +3,130 @@
 <head>
     <link href="css/style.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+
+    <title>Elizabeth Jennings</title>
 </head>
 
 <body>
 
+
+
+    <section class="tabbed">
+        <div class="tabbedmenu">
+            <div class="tab-button active">
+                Kelly Mainstill
+            </div>
+            <div class="tab-button">
+                Frances Raysens
+            </div>
+            <div class="tab-button">
+                Jennifer Westerfeld
+            </div>
+            <div class="tab-button">
+                Jacki Mackelhan
+            </div>
+            <div class="tab-button">
+                Ann Chadwick
+            </div>
+            <div class="tab-button">
+                Laura Gering
+            </div>
+            <div class="tab-button">
+                Michelle
+            </div>
+            <div class="tab-button">
+                Ms. Lefler
+            </div>
+            <div class="tab-button">
+                Patty Rawlings
+            </div>
+            <div class="tab-button">
+                Dee Eckert
+            </div>
+            <div class="tab-button">
+                Stephanie
+            </div>
+        </div>
+
+        <ul>
+        <li class="tab-item active">
+            <div>
+                Deputy Cheif of Staff for the Vice President's office. 
+                Purpose: To check on President Reagan's condition with a hospital source after 
+                his assassination attempt.
+            </div>
+        </li>
+        <li class="tab-item">
+            <div>
+                Psychologist
+                Purpose: To assess the mental stability of KGB informant, Adam Darwin.
+            </div>
+        </li>
+        <li class="tab-item">
+            <div>
+                Clark's sister and Martha's sister-in-law.
+                Purpose: To provide Clark with family as a cover.
+            </div>
+        </li>
+        <li class="tab-item">
+            <div>
+                Mover at a Newport News submarine plant. 
+                Purpose: To steal classified plans of a particular blade.
+            </div>
+        </li>
+        <li class="tab-item">
+            <div>
+                Social Worker
+                Purpose: To look after Jared Connors after the death of his family.
+            </div>
+        </li>
+        <li class="tab-item">
+            <div>
+                CIA Security Officer
+                Purpose: To handle Andrew Larrick and convince Abassin Zadran to murder two 
+                other Muiahideen commanders.
+            </div>
+        </li>
+        <li class="tab-item">
+            <div>
+                Alcoholics Anonymous attendee and General Dynamics employee. 
+                Purpose: To use Lisa, her sponsor and a Northrup employee, to take pictures 
+                of stealth technology.
+            </div>
+        </li>
+        <li class="tab-item">
+            <div>
+                Businesswoman. 
+                Purpose: To seduce Neil Sandilands, the Clayton Hotel manager, in order to 
+                gain access to the hotel room where the CIA guarding Mujahideen commanders stayed. 
+            </div>
+        </li>
+        <li class="tab-item">
+            <div>
+                Aspiring Mary Kay consultant. 
+                Purpose: To gain the trust of the Seong family and steal an access code to which
+                Young-Hee's husband, Don Seong, has access at the lab he works at which 
+                contains pathogens.
+            </div>
+        </li>
+        <li class="tab-item">
+            <div>
+                Airline attendant, married to Brad Eckert and adoptive 
+                mother of Tuan Eckert. 
+                Purpose: Spy on the Morozov family who fled the Soviet Union.
+            </div>
+        </li>
+        <li class="tab-item">
+            <div>
+                In-home nurse. 
+                Purpose: Gain information from Glenn Haskard who works with Soviet negotiators.
+            </div>
+        </li>
+        </ul>
+    </section>
+
+
+	<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 
