--- a/WEB303As06/index.html
+++ b/WEB303As06/index.html
@@ -4,44 +4,47 @@
     <link href="css/style.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
+
     <title>Elizabeth Jennings</title>
 </head>
 
 <body>
 
+    <section class="accordionElizabeth">
+        
+    </section>
 
 
     <section class="tabbed">
+        <div class="classified">
+            <h1>CLASSIFIED</h1>
+        </div>
+
+        <div class="declassified">
         <div class="tabbedmenu">
             <div class="tab-button active">
                 Kelly Mainstill
             </div>
             <div class="tab-button">
-                Frances Raysens
+                Frances Яaysens
             </div>
             <div class="tab-button">
-                Jennifer Westerfeld
+                JennifeЯ WesteЯfeld
             </div>
             <div class="tab-button">
-                Jacki Mackelhan
+                Jackie Mackelhan
             </div>
             <div class="tab-button">
                 Ann Chadwick
             </div>
             <div class="tab-button">
-                Laura Gering
-            </div>
-            <div class="tab-button">
                 Michelle
             </div>
             <div class="tab-button">
-                Ms. Lefler
-            </div>
-            <div class="tab-button">
-                Patty Rawlings
-            </div>
-            <div class="tab-button">
-                Dee Eckert
+                Patty Яawlings
             </div>
             <div class="tab-button">
                 Stephanie
@@ -51,78 +54,90 @@
         <ul>
         <li class="tab-item active">
             <div>
-                Deputy Cheif of Staff for the Vice President's office. 
-                Purpose: To check on President Reagan's condition with a hospital source after 
-                his assassination attempt.
+                <p class="pinfo">Deputy Cheif of Staff for the Vice President's office.</p>
+                <img src="images/alias001 kelly.jpg">
+                <div class="purpose"><p>PUЯPOSE:</p> <br/>
+                <p> To check on President Reagan's condition with a hospital source after 
+                his assassination attempt.</p>
             </div>
         </li>
         <li class="tab-item">
             <div>
-                Psychologist
-                Purpose: To assess the mental stability of KGB informant, Adam Darwin.
+                <p class="pinfo">Psychologist</p>
+                <img src="images/alias002 frances.jpg">
+                <div class="purpose">
+                    <p>PUЯPOSE:</p> <br/>
+                    <p> To assess the mental stability of KGB informant, Adam Darwin.</p>
+                </div>
             </div>
         </li>
         <li class="tab-item">
             <div>
-                Clark's sister and Martha's sister-in-law.
-                Purpose: To provide Clark with family as a cover.
+                <p class="pinfo">Clark's sister and Martha's sister-in-law.</p>
+                <img src="images/alias003 Jennifer.jpg">
+                <div class="purpose">
+                    <p>PUЯPOSE:</p> <br/>
+                    <p> To provide Clark with family as a cover.</p>
+                </div>
             </div>
         </li>
         <li class="tab-item">
             <div>
-                Mover at a Newport News submarine plant. 
-                Purpose: To steal classified plans of a particular blade.
+                <p class="pinfo">Mover at a Newport News submarine plant. </p>
+                <img src="images/alias004 Jackie.jpg">
+                <div class="purpose">
+                    <p>PUЯPOSE:</p> <br/>
+                    <p> To steal classified plans of a particular blade.</p>
+                </div>
             </div>
         </li>
         <li class="tab-item">
             <div>
-                Social Worker
-                Purpose: To look after Jared Connors after the death of his family.
+                <p class="pinfo">Social Worker</p>
+                <img src="images/alias005 Ann.jpg">
+                <div class="purpose">
+                    <p>PUЯPOSE:</p> <br/>
+                    <p> To look after Jared Connors after the death of his family.</p>
+                </div>
             </div>
         </li>
         <li class="tab-item">
             <div>
-                CIA Security Officer
-                Purpose: To handle Andrew Larrick and convince Abassin Zadran to murder two 
-                other Muiahideen commanders.
+                <p class="pinfo">Alcoholics Anonymous attendee and General Dynamics employee. </p>
+                <img src="images/alias007 Michelle.jpg">
+                <div class="purpose">
+                    <p>PUЯPOSE:</p> <br/>
+                    <p> To use Lisa, her sponsor and a Northrup employee, to take pictures 
+                    of stealth technology.</p>
+                </div>
             </div>
         </li>
         <li class="tab-item">
             <div>
-                Alcoholics Anonymous attendee and General Dynamics employee. 
-                Purpose: To use Lisa, her sponsor and a Northrup employee, to take pictures 
-                of stealth technology.
+                <p class="pinfo">Aspiring Mary Kay consultant. </p>
+                <img src="images/alias009 patty.jpg">
+                <div class="purpose">
+                    <p>PUЯPOSE:</p> <br/>
+                    <p> To gain the trust of the Seong family and steal an access 
+                        code to which Young-Hee's husband, Don Seong, has access at the lab he 
+                        works at which contains pathogens.</p>
+                </div>
             </div>
         </li>
+
         <li class="tab-item">
             <div>
-                Businesswoman. 
-                Purpose: To seduce Neil Sandilands, the Clayton Hotel manager, in order to 
-                gain access to the hotel room where the CIA guarding Mujahideen commanders stayed. 
-            </div>
-        </li>
-        <li class="tab-item">
-            <div>
-                Aspiring Mary Kay consultant. 
-                Purpose: To gain the trust of the Seong family and steal an access code to which
-                Young-Hee's husband, Don Seong, has access at the lab he works at which 
-                contains pathogens.
-            </div>
-        </li>
-        <li class="tab-item">
-            <div>
-                Airline attendant, married to Brad Eckert and adoptive 
-                mother of Tuan Eckert. 
-                Purpose: Spy on the Morozov family who fled the Soviet Union.
-            </div>
-        </li>
-        <li class="tab-item">
-            <div>
-                In-home nurse. 
-                Purpose: Gain information from Glenn Haskard who works with Soviet negotiators.
+                <p class="pinfo">In-home nurse. </p>
+                <img src="images/alias011 Stephanie.jpg">
+                <div class="purpose">
+                    <p>PUЯPOSE:</p> <br/> <br/>
+                    <p> Gain information from Glenn Haskard who works with Soviet 
+                        negotiators.</p>
+                </div>
             </div>
         </li>
         </ul>
+        </div>
     </section>
 
 
