--- a/WEB303As06/index.html
+++ b/WEB303As06/index.html
@@ -12,9 +12,17 @@
 </head>
 
 <body>
+    <header class="glitch">
+        <h1 class="glitchOut">Elizabeth Jennings</h1>
+    </header>
+
 
     <section class="accordionElizabeth">
         
+    </section>
+
+    <section class="accordionNadezhda">
+
     </section>
 
 
@@ -142,6 +150,7 @@
 
 
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 
