--- a/WEB303As06/index.html
+++ b/WEB303As06/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html>
-
 <head>
     <link href="css/style.css" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
