--- a/WEB303As06/index.html
+++ b/WEB303As06/index.html
@@ -12,19 +12,55 @@
 </head>
 
 <body>
-    <header class="glitch">
-        <h1 class="glitchOut">Elizabeth Jennings</h1>
+    <header>
+        <h1 class="glitch">Elizabeth Jennings</h1>
     </header>
 
-
+<section class="accordion">
     <section class="accordionElizabeth">
-        
+        <h1 id="Elizabeth1" class="Elizabeth1">The Basics</h1>
+        <div id="Elizabeth1" class="Elizabeth1-content">
+            <p>Elizabeth (Korman) Jennings lives in a Falls Church, Virginia with her husband, Phillip, and her
+                children, Paige and Henry. They live the American dream.</p>
+        </div>
+        <h1 id="Elizabeth2" class="Elizabeth2">Job</h1>
+        <div id="Elizabeth2" class="Elizabeth2-content">
+            <p>Elizabeth and her husband run a small travel agency in Dupont Circle. They assist various
+                community members, such as her daughter's church group, to take vacations and missions across
+                the world. </p>
+        </div>
+        <h1 id="Elizabeth3" class="Elizabeth3">Personality</h1>
+        <div id="Elizabeth3" class="Elizabeth3-content">
+            <p>Elizabeth is smart, driven, and charismatic. She will do anything for the people she loves, and
+                is dedicated to her ideals. Elizabeth is a tough, but nurturing figure in her children's lives. She has some 
+                issues coming to terms with Paige's interest in religion, but is willing to try her best. She worries about 
+                Henry's interest in video games, but knows he's smart and capable of great things.</p>
+        </div>
     </section>
 
     <section class="accordionNadezhda">
-
+        <h1 id="Nad1" class="Nad1">The Basics</h1>
+        <div id="Nad1" class="Nad1-content">
+            <p>Nadezhda Borisovna Popova was born in Smolensk, Soviet Union, in 1940. Her father died when she was
+                two in the battle of Stalingrad. She was raised by her mother, a bookkepper for the local party
+                committee. </p>
+        </div>
+        <h1 id="Nad2">Job</h1>
+        <div id="Nad2" class="Nad2-content">
+            <p>Nadezhda trained in Gryazi, Soviet Union to become a Directorate S Officer, also known as 
+                the Illegals Program. She learned various skills in combat and deception, as well as American
+                cultural identities and speech patterns. Nadezhda was introduced to Mikhail (Mischa) Andreiovich Petrov in 
+                1962, her future husband in America. They were to never speak Russian again, and never discuss their lives 
+                prior to moving to America. </p>
+        </div>
+        <h1 id="Nad3">PeЯsonality</h1>
+        <div id="Nad3" class="Nad3-content">
+            <p>Nadezhda is absolutely devoted to the Soviet cause. She will do anything for her people. She's
+                a tough love type of person. As an operative she is unrelenting, and unafraid to risk her own 
+                life for the cause.</p>
+        </div>
     </section>
-
+</section>
 
     <section class="tabbed">
         <div class="classified">
@@ -149,8 +185,8 @@
     </section>
 
 
-	<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-
+	<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>    
+    
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 
