--- a/WEB303As07/index.html
+++ b/WEB303As07/index.html
@@ -3,24 +3,37 @@
 <head>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/photoViewer.css" rel="stylesheet">
+
+    <!-- 
+        Photo source: self//2014-2016
+    -->
 </head>
 
 <body>
-    <h1><!-- your name goes here --> Photo Gallery</h1>
+    <h1>Chantal's Food Gallery</h1>
     <div id="photo-viewer">
         <a href="#" class="photo-box is-loading"></a>
         <div class="photo-thumbnails">
-            <a href="img/full-sized-photo-1.png" class="thumbnail-anchor active" title="photo 1">
-                <img src="img/thumbnail-photo-1.png" alt="thumbnail 1">
+            <a href="img/img1_full.jpg" class="thumbnail-anchor active" title="bibimbap">
+                <img src="img/img1_thumb.jpg" alt="bibimbap">
             </a>
-            <a href="img/full-sized-photo-2.png" class="thumbnail-anchor" title="photo 2">
-                <img src="img/thumbnail-photo-2.png" alt="thumbnail 2">
+            <a href="img/img2_full.jpg" class="thumbnail-anchor" title="pie">
+                <img src="img/img2_thumb.jpg" alt="pie">
             </a>
-            <!-- Add more images here -->
+            <a href="img/img3_full.jpg" class="thumbnail-anchor" title="lambshank">
+                <img src="img/img3_thumb.jpg" alt="lambshank">
+            </a>
+            <a href="img/img4_full.jpg" class="thumbnail-anchor" title="milkshake">
+                <img src="img/img4_thumb.jpg" alt="milkshake">
+            </a>
+            <a href="img/img5_full.jpg" class="thumbnail-anchor" title="mexican">
+                <img src="img/img5_thumb.jpg" alt="mexican">
+            </a>
         </div>
     </div>
 	<script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/photoViewer.js"></script>
 </body>
 
 </html>
