gallery is working, still need to make it pretty

--- a/WEB303As07/index.html
+++ b/WEB303As07/index.html
@@ -5,7 +5,10 @@
     <link href="css/photoViewer.css" rel="stylesheet">
 
     <!-- 
-        Photo source: self//2014-2016
+        Photo source: 
+        Photo Viewer: self//2014-2016
+        Background: https://pixabay.com/illustrations/background-bohemian-painting-boho-7123020/
+                    Pixabay License: Free for commercial use, No Attribution Required.
     -->
 </head>
 
