--- a/WEB303As07/index.html
+++ b/WEB303As07/index.html
@@ -4,6 +4,8 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/photoViewer.css" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@300&display=swap" rel="stylesheet">
+
     <!-- 
         Photo source: 
         Photo Viewer: self//2014-2016
@@ -17,7 +19,7 @@
     <div id="photo-viewer">
         <a href="#" class="photo-box is-loading"></a>
         <div class="photo-thumbnails">
-            <a href="img/img1_full.jpg" class="thumbnail-anchor active" title="bibimbap">
+            <a href="img/img1_full.jpg" class="thumbnail-anchor" title="bibimbap">
                 <img src="img/img1_thumb.jpg" alt="bibimbap">
             </a>
             <a href="img/img2_full.jpg" class="thumbnail-anchor" title="pie">
