--- a/WEB303As08/index.html
+++ b/WEB303As08/index.html
@@ -5,7 +5,24 @@
 </head>
 
 <body>
-    <h1><!-- your name and the show/movie/book name goes here --></h1>
+    <h1>Chantal Monette || Wentworth</h1>
+    <input type="text" name="search" placeholder="Search..." autofocus />
+
+    <table class="inmate">
+        <tr>
+            <th>Name</th>
+            <th>Nickname</th>
+            <th>Occupation</th>
+            <th>Status</th>
+            <th>Sentence</th>
+        </tr>
+        <tr class="inmate">
+            
+        </tr>
+        
+    </table>
+
+    <button id="am">A - M (4)</button> <button id="nz">N - Z (4)</button>
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
