--- a/WEB303As08/index.html
+++ b/WEB303As08/index.html
@@ -8,17 +8,19 @@
     <h1>Chantal Monette || Wentworth</h1>
     <input type="text" name="search" placeholder="Search..." autofocus />
 
-    <table class="inmate">
-        <tr>
-            <th>Name</th>
-            <th>Nickname</th>
-            <th>Occupation</th>
-            <th>Status</th>
-            <th>Sentence</th>
-        </tr>
-        <tr class="inmate">
-            
-        </tr>
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Nickname</th>
+                <th>Occupation</th>
+                <th>Status</th>
+                <th>Sentence</th>
+            </tr>
+        </thead>
+        <tbody class="inmate">
+
+        </tbody>
         
     </table>
 
