updated table to include data first appeared

--- a/WEB303As09/index.html
+++ b/WEB303As09/index.html
@@ -16,6 +16,7 @@
                 <th>Occupation</th>
                 <th>Status</th>
                 <th>Sentence</th>
+                <th>First Appeared</th>
             </tr>
         </thead>
         <tbody class="inmate">
