--- a/WEB303As09/index.html
+++ b/WEB303As09/index.html
@@ -11,12 +11,12 @@
     <table>
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Nickname</th>
-                <th>Occupation</th>
-                <th>Status</th>
-                <th>Sentence</th>
-                <th>First Appeared</th>
+                <th data-sort="name"><a>Name</a></th>
+                <th data-sort="name"><a>Nickname</a></th>
+                <th data-sort="name"><a>Occupation</a></th>
+                <th data-sort="name"><a>Status</a></th>
+                <th data-sort="name"><a>Sentence</a></th>
+                <th data-sort="date"><a>First Appeared</a></th>
             </tr>
         </thead>
         <tbody class="inmate">
