--- a/WEB303As09/index.html
+++ b/WEB303As09/index.html
@@ -8,7 +8,7 @@
     <h1>Chantal Monette || Wentworth</h1>
     <input type="text" name="search" placeholder="Search..." autofocus />
 
-    <table>
+    <table class="sortable">
         <thead>
             <tr>
                 <th data-sort="name"><a>Name</a></th>
