--- a/WEB303As09/index.html
+++ b/WEB303As09/index.html
@@ -10,12 +10,30 @@
     <table class="sortable">
         <thead>
             <tr>
-                <th data-sort="name"><a>Name</a></th>
-                <th data-sort="name"><a>Nickname</a></th>
-                <th data-sort="name"><a>Occupation</a></th>
-                <th data-sort="name"><a>Status</a></th>
-                <th data-sort="name"><a>Sentence</a></th>
-                <th data-sort="date"><a>First Appeared</a></th>
+                <th data-sort="name"><a>Name
+                    <span class="asc-chevron">&#x25BC;</span>
+                    <span class="desc-chevron">&#x25B2;</span>
+                </a></th>
+                <th data-sort="name"><a>Nickname
+                    <span class="asc-chevron">&#x25BC;</span>
+                    <span class="desc-chevron">&#x25B2;</span>
+                </a></th>
+                <th data-sort="name"><a>Occupation
+                    <span class="asc-chevron">&#x25BC;</span>
+                    <span class="desc-chevron">&#x25B2;</span>
+                </a></th>
+                <th data-sort="name"><a>Status
+                    <span class="asc-chevron">&#x25BC;</span>
+                    <span class="desc-chevron">&#x25B2;</span>
+                </a></th>
+                <th data-sort="name"><a>Sentence
+                    <span class="asc-chevron">&#x25BC;</span>
+                    <span class="desc-chevron">&#x25B2;</span>
+                </a></th>
+                <th data-sort="date"><a>First Appeared
+                    <span class="asc-chevron">&#x25BC;</span>
+                    <span class="desc-chevron">&#x25B2;</span>
+                </a></th>
             </tr>
         </thead>
         <tbody class="inmate">
