--- a/WEB303As09/index.html
+++ b/WEB303As09/index.html
@@ -10,27 +10,27 @@
     <table class="sortable">
         <thead>
             <tr>
-                <th data-sort="name"><a>Name
+                <th data-sort="name"><a class="filter-link" href="#">Name
                     <span class="asc-chevron">&#x25BC;</span>
                     <span class="desc-chevron">&#x25B2;</span>
                 </a></th>
-                <th data-sort="name"><a>Nickname
+                <th data-sort="name"><a class="filter-link"  href="#">Nickname
                     <span class="asc-chevron">&#x25BC;</span>
                     <span class="desc-chevron">&#x25B2;</span>
                 </a></th>
-                <th data-sort="name"><a>Occupation
+                <th data-sort="name"><a class="filter-link" href="#">Occupation
                     <span class="asc-chevron">&#x25BC;</span>
                     <span class="desc-chevron">&#x25B2;</span>
                 </a></th>
-                <th data-sort="name"><a>Status
+                <th data-sort="name"><a class="filter-link" href="#">Status
                     <span class="asc-chevron">&#x25BC;</span>
                     <span class="desc-chevron">&#x25B2;</span>
                 </a></th>
-                <th data-sort="name"><a>Sentence
+                <th data-sort="name"><a class="filter-link" href="#">Sentence
                     <span class="asc-chevron">&#x25BC;</span>
                     <span class="desc-chevron">&#x25B2;</span>
                 </a></th>
-                <th data-sort="date"><a>First Appeared
+                <th data-sort="date"><a class="filter-link" href="#">First Appeared
                     <span class="asc-chevron">&#x25BC;</span>
                     <span class="desc-chevron">&#x25B2;</span>
                 </a></th>
