--- a/20221130 Ass10/index.html
+++ b/20221130 Ass10/index.html
@@ -6,11 +6,34 @@
 
 <body>
     <h1>
-        <!-- your name goes here -->
+        Chantal Monette
     </h1>
+
+    <form action="/register" method="post">
+        <label for="username">Username: </label>
+        <input type="text" id="username" name="username" required />
+            <br/>
+        <label for="password">Password: </label>
+        <input type="password" id="password" name="password" />
+            <br/>
+        <label for="password2">Confirm Password: </label>
+        <input type="password" id="password2" name="password2" />
+            <br/>
+        <select id="country" name="country">
+            <option>--Select your Country--</option>
+        </select>
+            <br/>
+        <label for="terms">I accept the terms of service.</label>
+        <input type="checkbox" id="terms" name="terms" value="yes" />
+            <br />
+        
+        <input type="submit" id="submit" value="submit" />
+    </form>
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/countries.js"></script>
+
 </body>
 
 </html>
