--- a/20221130 Ass10/index.html
+++ b/20221130 Ass10/index.html
@@ -9,7 +9,7 @@
         Chantal Monette
     </h1>
 
-    <form action="/register" method="post">
+    <form method="post">
         <label for="username">Username: </label>
         <input type="text" id="username" name="username" required />
             <br/>
@@ -18,9 +18,10 @@
             <br/>
         <label for="password2">Confirm Password: </label>
         <input type="password" id="password2" name="password2" />
+        <span id="message"></span>
             <br/>
         <select id="country" name="country">
-            <option>--Select your Country--</option>
+            
         </select>
             <br/>
         <label for="terms">I accept the terms of service.</label>
