--- a/20221130 Ass10/index.html
+++ b/20221130 Ass10/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+    <main>
     <h1>
         Chantal Monette
     </h1>
@@ -24,13 +25,13 @@
             
         </select>
             <br/>
-        <label for="terms">I accept the terms of service.</label>
-        <input type="checkbox" id="terms" name="terms" value="yes" />
+        <input type="checkbox" id="terms" name="terms" value="yes" /> 
+        <label for="terms" id="termstext">I accept the terms of service.</label>
             <br />
         
         <input type="submit" id="submit" value="submit" />
     </form>
-
+</main>
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <script type="text/javascript" src="js/countries.js"></script>
